# C-

./: .gitignore  CMakeLists.txt  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
